whoami/whoami-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
spec:
  # type: ClusterIP
  selector:
    app: whoami-pod
  ports:
    - name: http-whoami-out
      protocol: TCP
      port: 80
      targetPort: http-whoami
